4473.	[bug]		Only call fsync / _commit on regular files. [RT #43196]

4472.	[bug]		Named could fail to find the correct NSEC3 records when
			a zone was updated between looking for the answer and
			looking for the NSEC3 records proving non-existance
			of the answer. [RT #43247]

4471.	[cleanup]	Revert a query logging change inadvertently
			backported from 9.11. [RT #43238]

4468.	[bug]		Address ECS option handling issues. [RT #43191]

4467.	[security]	It was possible to trigger an assertion when
			rendering a message. (CVE-2016-2776) [RT #43139]

4466.	[bug]		Interface scanning didn't work on a Windows system
			without a non local IPv6 addresses. [RT #43130]

4464.	[bug]		Fix windows python support. [RT #43173]

4461.	[bug]		win32: not all external data was properly marked
			as external data for windows dll. [RT #43161]

4458.	[cleanup]	Update assertions to be more correct, and also remove
			use of a reserved word. [RT #43090]

4457.	[maint]		Added AAAA (2001:500:a8::e) for E.ROOT-SERVERS.NET.

4456.	[doc]		Add DOCTYPE and lang attribute to <html> tags.
			[RT #42587]

4453.	[bug]		Prefetching of DS records failed to update their
			RRSIGs. [RT #42865]

4451.	[cleanup]	Log more useful information if a PKCS#11 provider
			library cannot be loaded. [RT #43076]

4450.	[port]		Provide more nuanced HSM support which better matches
			the specific PKCS11 providers capabilities. [RT #42458]

4448.	[bug]		win32: ::1 was not being found when iterating
			interfaces. [RT #42993]

4446.	[bug]		The cache_find() and _findrdataset() functions
			could find rdatasets that had been marked stale.
			[RT #42853]

4445.	[cleanup]	isc_errno_toresult() can now be used to call the
			formerly private function isc__errno2result().
			[RT #43050]

4443.	[func]		Set TCP_MAXSEG in addition to IPV6_USE_MIN_MTU on
			TCP sockets. [RT #42864]

4442.	[bug]		Fix RPZ CIDR tree insertion bug that corrupted
			tree data structure with overlapping networks